--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
@@ -19,11 +19,22 @@
             equipo de facturación y que son ejecutados en el marco de la gestión del FFIE.
         </div>
     </div>
+
+    <div class="busqueda mt-2em">
+        <mat-form-field appearance="outline" class="busqueda--input">
+            <mat-label>Buscador / Filtro</mat-label>
+            <input matInput #filtro (keyup)="applyFilter($event)">
+        </mat-form-field>
+        <button mat-button color="primary" class="busqueda--img" (click)="filtro.focus()">
+            <img src="assets/img/icon/lupa.svg" alt="Buscar">
+        </button>
+    </div>
+
     <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="fechaSolicitud">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de solicitud </th>
-                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
+                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCreacion }}</b> </td>
             </ng-container>
             <ng-container matColumnDef="numeroSolicitud">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de solicitud </th>
@@ -39,7 +50,7 @@
             </ng-container>
             <ng-container matColumnDef="estadoAprobacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la verificación </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoNombre }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoCodigo === listaEstadoSolicitudPago.enviadaParaVerificacion ? element.estadoNombre2 : element.estadoNombre }} </td>
             </ng-container>
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
@@ -65,14 +76,16 @@
                         <button mat-raised-button
                                 color="accent"
                                 class="btn-table"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacion">
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacion"
+                                (click)="getCerificadoDialog( element )">
                                 Enviar para autorizar solicitud
                         </button>
 
                         <button mat-raised-button
                                 color="accent"
                                 class="btn-table"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacion">
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacion"
+                                (click)="changueStatusSolicitudPago( element.solicitudPagoId )">
                                 Devolver solicitud
                         </button>
 
@@ -80,7 +93,8 @@
                                 color="accent"
                                 class="btn-table"
                                 [routerLink]="[ 'verDetalleAprobarSolicitud', element.contratoId, element.solicitudPagoId ]"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enviadaAutorizacion">
+                                *ngIf=" element.estadoCodigo === listaEstadoSolicitudPago.enviadaAutorizacion
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudDevueltaApoyoSupervision">
                                 Ver detalle
                         </button>
 
@@ -106,14 +120,16 @@
                         <button mat-raised-button
                                 color="accent"
                                 class="btn-table"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacion">
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacion"
+                                (click)="getCerificadoDialog( element )">
                                 Enviar para autorizar solicitud
                         </button>
 
                         <button mat-raised-button
                                 color="accent"
                                 class="btn-table"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacion">
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacion"
+                                (click)="changueStatusSolicitudPago( element.solicitudPagoId )">
                                 Devolver solicitud
                         </button>
 
@@ -121,7 +137,8 @@
                                 color="accent"
                                 class="btn-table"
                                 [routerLink]="[ 'verDetalleExpensas', element.solicitudPagoId ]"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enviadaAutorizacion">
+                                *ngIf=" element.estadoCodigo === listaEstadoSolicitudPago.enviadaAutorizacion
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudDevueltaApoyoSupervision">
                                 Ver detalle
                         </button>
 
