--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/autorizar-solicitud-pago/autorizar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/autorizar-solicitud-pago/autorizar-solicitud-pago.component.html
@@ -19,6 +19,17 @@
             ejecutados en el marco de la gestión del FFIE.
         </div>
     </div>
+
+    <div class="busqueda mt-2em">
+        <mat-form-field appearance="outline" class="busqueda--input">
+            <mat-label>Buscador / Filtro</mat-label>
+            <input matInput #filtro (keyup)="applyFilter($event)">
+        </mat-form-field>
+        <button mat-button color="primary" class="busqueda--img" (click)="filtro.focus()">
+            <img src="assets/img/icon/lupa.svg" alt="Buscar">
+        </button>
+    </div>
+
     <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="fechaSolicitud">
@@ -44,39 +55,87 @@
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
                 <td mat-cell *matCellDef="let element" align="center">
-                    <ng-container *ngIf="element.tipoSolicitudCodigo !== tipoSolicitudCodigo.expensas; else esExpensas">
-                        <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'autorizacionSolicitud', element.contratoId, element.solicitudPagoId ]">
-                            Autorizar solicitud
+                    <ng-container *ngIf="element.tipoSolicitudCodigo !== tipoSolicitud.expensas; else esExpensas">
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'autorizacionSolicitud', element.contratoId, element.solicitudPagoId ]"
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enviadaAutorizacion">
+                                Autorizar solicitud
                         </button>
-                        <button mat-raised-button color="accent" class="btn-table">
-                            Enviar para trámite en financiera
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'autorizacionSolicitud', element.contratoId, element.solicitudPagoId ]"
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoAutorizacion">
+                                Ver detalle/Editar
                         </button>
-                        <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'autorizacionSolicitud', element.contratoId, element.solicitudPagoId ]">
-                            Ver detalle/Editar
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoAutorizacion">
+                                Enviar para trámite en financiera
                         </button>
-                        <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'verDetalleAutorizarSolicitud', element.contratoId, element.solicitudPagoId ]">
-                            Ver detalle
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoAutorizacion">
+                                Devolver solicitud
                         </button>
-                        <button mat-raised-button color="accent" class="btn-table">
-                            Devolver solicitud
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'verDetalleAutorizarSolicitud', element.contratoId, element.solicitudPagoId ]"
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enviadaVerificacionFinanciera">
+                                Ver detalle
                         </button>
+
                     </ng-container>
                     <ng-template #esExpensas>
-                        <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'observacionExpensas', element.solicitudPagoId ]">
-                            Autorizar solicitud
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'observacionExpensas', element.solicitudPagoId ]"
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enviadaAutorizacion">
+                                Autorizar solicitud
                         </button>
-                        <button mat-raised-button color="accent" class="btn-table">
-                            Enviar para trámite en financiera
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'observacionExpensas', element.solicitudPagoId ]"
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoAutorizacion">
+                                Ver detalle/Editar
                         </button>
-                        <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'observacionExpensas', element.solicitudPagoId ]">
-                            Ver detalle/Editar
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoAutorizacion">
+                                Enviar para trámite en financiera
                         </button>
-                        <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'verDetalleExpensas', element.solicitudPagoId ]">
-                            Ver detalle
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoAutorizacion">
+                                Devolver solicitud
                         </button>
-                        <button mat-raised-button color="accent" class="btn-table">
-                            Devolver solicitud
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'verDetalleExpensas', element.solicitudPagoId ]"
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enviadaVerificacionFinanciera">
+                                Ver detalle
                         </button>
+
                     </ng-template>
                 </td>
             </ng-container>
