--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
@@ -76,7 +76,7 @@
                         <button mat-raised-button
                                 color="accent"
                                 class="btn-table"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacion"
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacion && element.registroCompletoVerificar === true && element.tieneObservacion === false"
                                 (click)="getCerificadoDialog( element )">
                                 Enviar para autorizar solicitud
                         </button>
@@ -84,7 +84,7 @@
                         <button mat-raised-button
                                 color="accent"
                                 class="btn-table"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacion"
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacion && element.registroCompletoVerificar === true && element.tieneObservacion === true"
                                 (click)="changueStatusSolicitudPago( element.solicitudPagoId )">
                                 Devolver solicitud
                         </button>
