--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/form-verificar-solicitud-vfsp/form-verificar-solicitud-vfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/form-verificar-solicitud-vfsp/form-verificar-solicitud-vfsp.component.html
@@ -153,9 +153,9 @@
 
             <mat-card class="shipping-card var-main-gris">
                 <mat-card-content style="text-align: left;">
-                    <p><strong>Fecha de Radicación SAC a financiera:</strong> 10/10/2020 </p>
-                    <p><strong>Número de radicación SAC a financiera:</strong> 009898 </p>
-                    <p><strong>Fecha de asignación:</strong> 11/10/2020 </p>
+                    <p><strong>Fecha de Radicación SAC a financiera:</strong> {{ contrato.solicitudPagoOnly.fechaRadicacionSacFinanciera !== undefined ? ( contrato.solicitudPagoOnly.fechaRadicacionSacFinanciera | date: 'dd/MM/yyyy' ) : '' }} </p>
+                    <p><strong>Número de radicación SAC a financiera:</strong> {{ contrato.solicitudPagoOnly.numeroRadicacionSacFinanciera !== undefined ? contrato.solicitudPagoOnly.numeroRadicacionSacFinanciera : '' }} </p>
+                    <p><strong>Fecha de asignación:</strong> {{ contrato.solicitudPagoOnly.fechaAsignacionSacFinanciera !== undefined ? ( contrato.solicitudPagoOnly.fechaAsignacionSacFinanciera | date: 'dd/MM/yyyy' ) : '' }} </p>
                 </mat-card-content>
             </mat-card>
 
