--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/dialog-env-solicitud-autoriz/dialog-env-solicitud-autoriz.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/dialog-env-solicitud-autoriz/dialog-env-solicitud-autoriz.component.html
@@ -3,104 +3,121 @@
 </button>
 <div style="padding: 30px 20px; text-align: center;">
     <h1 class="title-menu--h1 centerTrick">
-        Enviar solicitud SolPagoO0001
+        Enviar solicitud {{ solicitud.numeroSolicitud }}
     </h1>
-    <mat-card class="shipping-card" style="padding: 1em 2em;">
-        <mat-card-content style="text-align: left;">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="row">
-                        <div class="pr-1">
-                            <label class="label-left" for="fechaRadicacionSAC" [ngClass]="{
-                                'color-secondaryColor':
-                                  (addressForm.get('fechaRadicacionSAC').invalid && addressForm.get('fechaRadicacionSAC').touched) ||
-                                  (addressForm.get('fechaRadicacionSAC').invalid && estaEditando)
-                              }">Fecha de radicación SAC a financiera</label>
+
+    <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
+        <mat-card class="shipping-card" style="padding: 1em 2em;">
+            <mat-card-content style="text-align: left;">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="pr-1">
+                                <label  class="label-left"
+                                        for="fechaRadicacionSAC"
+                                        [ngClass]="{ 'color-secondaryColor': (addressForm.get('fechaRadicacionSAC').invalid && addressForm.get('fechaRadicacionSAC').touched) || (addressForm.get('fechaRadicacionSAC').invalid && estaEditando === true ) }">
+                                        Fecha de radicación SAC a financiera
+                                </label>
+                            </div>
+                            <div class="col d-flex align-items-center">
+                                <mat-form-field class="example-full-width">
+                                    <input  matInput
+                                            formControlName="fechaRadicacionSAC"
+                                            [matDatepicker]="pickerFecha"
+                                            readonly
+                                            (click)="pickerFecha.open()"
+                                            required
+                                            placeholder="DD/MM/AAAA">
+                                    <mat-datepicker #pickerFecha></mat-datepicker>
+                                </mat-form-field>
+                                <button mat-button color="primary" type="button" (click)="pickerFecha.open()"
+                                    class="btn-calendario">
+                                    <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
+                                </button>
+                            </div>
+                            <span class="icon-incompleto">
+                                <img    class="icon-incompleto--img"
+                                        src="assets/img/icon/incompleto.svg"
+                                        alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                        matTooltip="Debe ingresar la información en el campo para continuar"
+                                        matTooltipClass="info-tooltip" *ngIf="(addressForm.get('fechaRadicacionSAC').invalid && addressForm.get('fechaRadicacionSAC').touched) || (addressForm.get('fechaRadicacionSAC').invalid && estaEditando)">
+                            </span>
                         </div>
-                        <div class="col d-flex align-items-center">
-                            <mat-form-field class="example-full-width">
-                                <input matInput formControlName="fechaRadicacionSAC" [matDatepicker]="pickerFecha"
-                                    readonly (click)="pickerFecha.open()" required placeholder="DD/MM/AAAA">
-                                <mat-datepicker #pickerFecha></mat-datepicker>
-                            </mat-form-field>
-                            <button mat-button color="primary" type="button" (click)="pickerFecha.open()"
-                                class="btn-calendario">
-                                <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
-                            </button>
-                        </div>
-                        <span class="icon-incompleto">
-                            <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido" [matTooltipPosition]="'above'"
-                                matTooltip="Debe ingresar la información en el campo para continuar"
-                                matTooltipClass="info-tooltip" *ngIf="
-                                (addressForm.get('fechaRadicacionSAC').invalid && addressForm.get('fechaRadicacionSAC').touched) ||
-                                  (addressForm.get('fechaRadicacionSAC').invalid && estaEditando)
-                              " />
-                        </span>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="row">
-                        <div class="pr-1">
-                            <label for="numeroRadicacionSAC" class="label-left" [ngClass]="{
-                                'color-secondaryColor':
-                                  (addressForm.get('numeroRadicacionSAC').invalid && addressForm.get('numeroRadicacionSAC').touched) ||
-                                  (addressForm.get('numeroRadicacionSAC').invalid && estaEditando)
-                              }">Número de radicación SAC a financiera</label>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="pr-1">
+                                <label for="numeroRadicacionSAC"
+                                        class="label-left"
+                                        [ngClass]="{ 'color-secondaryColor': (addressForm.get('numeroRadicacionSAC').invalid && addressForm.get('numeroRadicacionSAC').touched) || (addressForm.get('numeroRadicacionSAC').invalid && estaEditando) }">
+                                        Número de radicación SAC a financiera
+                                </label>
+                            </div>
+                            <div class="col d-flex">
+                                <mat-form-field class="full-width">
+                                    <input  matInput
+                                            #numeroRadicacionSAC
+                                            type="text"
+                                            maxlength="10"
+                                            formControlName="numeroRadicacionSAC"
+                                            required>
+                                </mat-form-field>
+                                <span class="contador">{{10 - numeroRadicacionSAC.value.length}}</span>
+                            </div>
+                            <span class="icon-incompleto">
+                                <img    class="icon-incompleto--img"
+                                        src="assets/img/icon/incompleto.svg"
+                                        alt="este campo es requerido"
+                                        [matTooltipPosition]="'above'"
+                                        matTooltip="Debe ingresar la información en el campo para continuar"
+                                        matTooltipClass="info-tooltip" *ngIf="(addressForm.get('numeroRadicacionSAC').invalid && addressForm.get('numeroRadicacionSAC').touched) || (addressForm.get('numeroRadicacionSAC').invalid && estaEditando)">
+                            </span>
                         </div>
-                        <div class="col d-flex">
-                            <mat-form-field class="full-width">
-                                <input matInput #numeroRadicacionSAC type="text" maxlength="10"
-                                    formControlName="numeroRadicacionSAC" required>
-                            </mat-form-field>
-                            <span class="contador">{{10 - numeroRadicacionSAC.value.length}}</span>
-                        </div>
-                        <span class="icon-incompleto">
-                            <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido" [matTooltipPosition]="'above'"
-                                matTooltip="Debe ingresar la información en el campo para continuar"
-                                matTooltipClass="info-tooltip" *ngIf="
-                                (addressForm.get('numeroRadicacionSAC').invalid && addressForm.get('numeroRadicacionSAC').touched) ||
-                                  (addressForm.get('numeroRadicacionSAC').invalid && estaEditando)
-                              " />
-                        </span>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="row">
-                        <div class="pr-1">
-                            <label for="urlSoporte" class="label-left" [ngClass]="{
-                                'color-secondaryColor':
-                                  (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) ||
-                                  (addressForm.get('urlSoporte').invalid && estaEditando)
-                              }">Url con soporte</label>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="pr-1">
+                                <label  for="urlSoporte"
+                                        class="label-left"
+                                        [ngClass]="{ 'color-secondaryColor': (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) || (addressForm.get('urlSoporte').invalid && estaEditando)}">
+                                        Url con soporte
+                                </label>
+                            </div>
+                            <div class="col d-flex">
+                                <mat-form-field class="full-width">
+                                    <input  matInput
+                                            #urlSoporte
+                                            type="text"
+                                            maxlength="400"
+                                            formControlName="urlSoporte"
+                                            required>
+                                </mat-form-field>
+                            </div>
+                            <span class="icon-incompleto">
+                                <img    class="icon-incompleto--img"
+                                        src="assets/img/icon/incompleto.svg"
+                                        alt="este campo es requerido"
+                                        [matTooltipPosition]="'above'"
+                                        matTooltip="Debe ingresar la información en el campo para continuar"
+                                        matTooltipClass="info-tooltip" *ngIf="(addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) || (addressForm.get('urlSoporte').invalid && estaEditando)">
+                            </span>
                         </div>
-                        <div class="col d-flex">
-                            <mat-form-field class="full-width">
-                                <input matInput #urlSoporte type="text" maxlength="400" formControlName="urlSoporte" required>
-                            </mat-form-field>
-                        </div>
-                        <span class="icon-incompleto">
-                            <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido" [matTooltipPosition]="'above'"
-                                matTooltip="Debe ingresar la información en el campo para continuar"
-                                matTooltipClass="info-tooltip" *ngIf="
-                                (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) ||
-                                  (addressForm.get('urlSoporte').invalid && estaEditando)
-                              " />
-                        </span>
                     </div>
                 </div>
-            </div>
-        </mat-card-content>
-    </mat-card>
-    <div class="text-center mb-2em">
-        <button mat-raised-button color="accent" class="btn-dialog" type="submit" [disabled]="addressForm.invalid">
-            Enviar para trámite en financiera
-        </button>
-    </div>
+            </mat-card-content>
+        </mat-card>
+        <div class="text-center mb-2em">
+            <button mat-raised-button
+                    color="accent"
+                    class="btn-dialog"
+                    type="submit"
+                    [disabled]="addressForm.dirty === false">
+                    Enviar para trámite en financiera
+            </button>
+        </div>
+    </form>
 </div>
