--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/ver-detalle-autorizar-solicitud/ver-detalle-autorizar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/ver-detalle-autorizar-solicitud/ver-detalle-autorizar-solicitud.component.html
@@ -169,6 +169,7 @@
                                         [esVerDetalle]="true">
             </app-obs-valid-listachequeo>
         </mat-expansion-panel>
+
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title">
@@ -198,6 +199,38 @@
                     <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"><b>¿Desde la coordinación tiene observaciones a el soporte de la solicitud?:</b> Si</p>
                     <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === false"><b>¿Desde la coordinación tiene observaciones a el soporte de la solicitud?:</b> No</p>
                     <section [innerHTML]="addressForm.get( 'observaciones' ).value" *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"></section>
+                </mat-card-content>
+            </mat-card>
+        </mat-expansion-panel>
+
+        <mat-expansion-panel class="expansion-style">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title">
+                    Certificado de autorización
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <mat-card class="shipping-card var-main-gris">
+                <mat-card-header class="header-card header-card--margin">
+                    <mat-card-title class="header-card--text textoGris">
+                        Certificado
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content style="text-align: left;">
+                    <p><strong>URL con certificado:</strong> {{ contrato.solicitudPagoOnly.solicitudPagoCertificado[0].url }} </p>
+                </mat-card-content>
+            </mat-card>
+
+            <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;" *ngIf="certificadoObsForm.get( 'fechaCreacion' ).value !== null">
+                <mat-card-header class="header-card header-card--margin">
+                    <mat-card-title class="header-card--text textoGris">
+                        Observación de la coordinación
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content style="text-align: left;">
+                    <p><b> {{ certificadoObsForm.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                    <p *ngIf="certificadoObsForm.get( 'tieneObservaciones' ).value === true"><b>¿Desde la coordinación tiene observaciones a el certificado de autorización?:</b> Si</p>
+                    <p *ngIf="certificadoObsForm.get( 'tieneObservaciones' ).value === false"><b>¿Desde la coordinación tiene observaciones a el certificado de autorización?:</b> No</p>
+                    <section [innerHTML]="certificadoObsForm.get( 'observaciones' ).value" *ngIf="certificadoObsForm.get( 'tieneObservaciones' ).value === true"></section>
                 </mat-card-content>
             </mat-card>
         </mat-expansion-panel>
