--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/form-valid-listchequeo-vfsp/form-valid-listchequeo-vfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/form-valid-listchequeo-vfsp/form-valid-listchequeo-vfsp.component.html
@@ -1,6 +1,6 @@
-<form *ngIf="listas.length > 0" [formGroup]="addressForm" (ngSubmit)="guardar()">
+<ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
     <mat-accordion>
-        <mat-expansion-panel class="expansion-style sub-expansion" formArrayName="listas" *ngFor="let lista of listas.controls; index as i">
+        <mat-expansion-panel class="expansion-style sub-expansion" *ngFor="let lista of listas.controls; index as i">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title sin-diligenciar" style="font-size: .8em !important;">
                     {{ firstLetterUpperCase( lista.get( 'nombre' ).value ) }}
@@ -23,44 +23,81 @@
                     </ng-container>
                     <ng-container matColumnDef="verificacionFinanciera">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Verificación financiera </th>
-                        <td mat-cell *matCellDef="let element" align="center">
-                            <div class="col">
-                                <mat-form-field class="select-width">
-                                    <mat-select [formControl]="element.get( 'respuestaRevisionTecnicaCodigo' )" required>
-                                        <mat-option *ngFor="let revision of listaRevisionTecnica" [value]="revision.codigo">
-                                            {{ revision.nombre }}
-                                        </mat-option>
-                                    </mat-select>
-                                </mat-form-field>
-                            </div>
-                        </td>
+                        <td mat-cell *matCellDef="let element" align="center"> {{ getRevisionTecnica( element.get( 'respuestaRevisionTecnicaCodigo' ).value ) }} </td>
                     </ng-container>
-                    <ng-container matColumnDef="observaciones">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="detalle"> Observaciones </th>
-                        <td mat-cell *matCellDef="let element; index as j" align="center" class="detalle">
-                            <button mat-raised-button
-                                    color="accent"
-                                    class="btn-table"
-                                    type="button"
-                                    *ngIf="noCumpleCodigo === element.get( 'respuestaRevisionTecnicaCodigo' ).value"
-                                    (click)="getSubsanacion( element, i, j )">
-                                    Observaciones
-                            </button>
-                        </td>
-                    </ng-container>
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumnsDetalle"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumnsDetalle;"></tr>
                 </table>
-            </div>
-            <div class="text-center mt-1em">
-                <button mat-button
-                        color="warn"
-                        class="btn-guardar"
-                        type="submit"
-                        [disabled]="getRespuestasListaChequeo( i ).dirty === false">
-                        <img  src="assets/img/icon/guardar.svg">
-                </button>
             </div>
         </mat-expansion-panel>
     </mat-accordion>
-</form>
+</ng-container>
+<ng-template #noEsVerDetalle>
+    <form *ngIf="listas.length > 0" [formGroup]="addressForm" (ngSubmit)="guardar()">
+        <mat-accordion>
+            <mat-expansion-panel class="expansion-style sub-expansion" formArrayName="listas" *ngFor="let lista of listas.controls; index as i">
+                <mat-expansion-panel-header class="expansion-style--header">
+                    <mat-panel-title class="expansion-style--title sin-diligenciar" style="font-size: .8em !important;">
+                        {{ firstLetterUpperCase( lista.get( 'nombre' ).value ) }}
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+        
+                <div class="table-responsive">
+                    <table mat-table [dataSource]="getMatTable( i )" matSort class="mat-elevation-z8">
+                        <ng-container matColumnDef="item">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header class="detalle"> Item </th>
+                            <td mat-cell *matCellDef="let element; index as j" align="center" class="detalle"> <b>{{ j + 1 }}</b> </td>
+                        </ng-container>
+                        <ng-container matColumnDef="documento">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header class="detalle"> Documento </th>
+                            <td mat-cell *matCellDef="let element" align="left"  class="detalle"> {{ element.get( 'listaChequeoItemNombre' ).value }} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="revTecnica">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header class="detalle"> Revisión técnica </th>
+                            <td mat-cell *matCellDef="let element" align="center" class="detalle"> {{ getRevisionTecnica( element.get( 'respuestaCodigo' ).value ) }} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="verificacionFinanciera">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Verificación financiera </th>
+                            <td mat-cell *matCellDef="let element" align="center">
+                                <div class="col">
+                                    <mat-form-field class="select-width">
+                                        <mat-select [formControl]="element.get( 'respuestaRevisionTecnicaCodigo' )" required>
+                                            <mat-option *ngFor="let revision of listaRevisionTecnica" [value]="revision.codigo">
+                                                {{ revision.nombre }}
+                                            </mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                </div>
+                            </td>
+                        </ng-container>
+                        <ng-container matColumnDef="observaciones">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header class="detalle"> Observaciones </th>
+                            <td mat-cell *matCellDef="let element; index as j" align="center" class="detalle">
+                                <button mat-raised-button
+                                        color="accent"
+                                        class="btn-table"
+                                        type="button"
+                                        *ngIf="noCumpleCodigo === element.get( 'respuestaRevisionTecnicaCodigo' ).value"
+                                        (click)="getSubsanacion( element, i, j )">
+                                        Observaciones
+                                </button>
+                            </td>
+                        </ng-container>
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    </table>
+                </div>
+                <div class="text-center mt-1em">
+                    <button mat-button
+                            color="warn"
+                            class="btn-guardar"
+                            type="submit"
+                            [disabled]="getRespuestasListaChequeo( i ).dirty === false">
+                            <img  src="assets/img/icon/guardar.svg">
+                    </button>
+                </div>
+            </mat-expansion-panel>
+        </mat-accordion>
+    </form>
+</ng-template>
+
