--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/verdetalle-vfsp/verdetalle-vfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/verdetalle-vfsp/verdetalle-vfsp.component.html
@@ -5,7 +5,7 @@
         </a>
     </div>
     <h1 class="title-menu--h1">
-        Ver detalle solicitud {{ contrato.solicitudPagoOnly.numeroSolicitud }}
+        Verificar solicitud {{ contrato.solicitudPagoOnly.numeroSolicitud }}
     </h1>
     <ng-container *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === this.tipoSolicitudCodigo.contratoInterventoria || contrato.solicitudPagoOnly.tipoSolicitudCodigo === this.tipoSolicitudCodigo.contratoObra; else esOtrosCostos">
         <p style="margin-top: 0.5em;">
@@ -41,10 +41,10 @@
                         <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo fase 2 - Construccion: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
                     </div>
                     <div class="chart2">
-                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses + contrato.plazoFase1PreMeses }} <strong>Días:</strong> {{ contrato.plazoFase1PreDias + contrato.plazoFase2ConstruccionDias }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo: Meses:</strong> {{ ( contrato.plazoFase2ConstruccionMeses !== undefined ? contrato.plazoFase2ConstruccionMeses : 0 ) + contrato.plazoFase1PreMeses }} <strong>Días:</strong> {{ contrato.plazoFase1PreDias + ( contrato.plazoFase2ConstruccionDias !== undefined ? contrato.plazoFase2ConstruccionDias : 0 ) }} </p>
                         <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
                         <p><strong>Fecha fin del contrato:</strong> {{ contrato.fechaTerminacionFase2 | date: 'dd/MM/yyyy' }} </p>
-                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo fase 2 - Construccion: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined && contrato.plazoFase2ConstruccionMeses !== undefined"><strong>Plazo fase 2 - Construccion: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
                     </div>
                 </div>
                 <h2 class="card-subTitle">DRP</h2>
@@ -60,11 +60,11 @@
                         </ng-container>
                         <ng-container matColumnDef="valor">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-                            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitud }} </td>
+                            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitudDdp | currency:'':'symbol-narrow':'.0-0' }} </td>
                         </ng-container>
                         <ng-container matColumnDef="saldo">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
-                            <td mat-cell *matCellDef="let element" align="center"> Viene del CU Generar documento de registro presupuestal de alli viene el saldo inicial </td>
+                            <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPresupuestal | currency:'':'symbol-narrow':'.0-0' }} </td>
                         </ng-container>
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -153,21 +153,21 @@
 
             <mat-card class="shipping-card var-main-gris">
                 <mat-card-content style="text-align: left;">
-                    <p><strong>Fecha de Radicación SAC a financiera:</strong> 10/10/2020 </p>
-                    <p><strong>Número de radicación SAC a financiera:</strong> 009898 </p>
-                    <p><strong>Fecha de asignación:</strong> 11/10/2020 </p>
+                    <p><strong>Fecha de Radicación SAC a financiera:</strong> {{ contrato.solicitudPagoOnly.fechaRadicacionSacFinanciera !== undefined ? ( contrato.solicitudPagoOnly.fechaRadicacionSacFinanciera | date: 'dd/MM/yyyy' ) : '' }} </p>
+                    <p><strong>Número de radicación SAC a financiera:</strong> {{ contrato.solicitudPagoOnly.numeroRadicacionSacFinanciera !== undefined ? contrato.solicitudPagoOnly.numeroRadicacionSacFinanciera : '' }} </p>
+                    <p><strong>Fecha de asignación:</strong> {{ contrato.solicitudPagoOnly.fechaAsignacionSacFinanciera !== undefined ? ( contrato.solicitudPagoOnly.fechaAsignacionSacFinanciera | date: 'dd/MM/yyyy' ) : '' }} </p>
                 </mat-card-content>
             </mat-card>
 
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title">
+                <mat-panel-title class="expansion-style--title sin-diligenciar">
                     Validar lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-form-valid-listchequeo-vfsp></app-form-valid-listchequeo-vfsp>
+            <app-form-valid-listchequeo-vfsp [contrato]="contrato" [esVerDetalle]="true"></app-form-valid-listchequeo-vfsp>
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
