--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/verificar-financ-solicitud-pago/verificar-financ-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/verificar-financ-solicitud-pago/verificar-financ-solicitud-pago.component.html
@@ -16,11 +16,22 @@
         u Otros costos/servicios, que le han sido asignadas a usted y que han sido aprobados previamente por el coordinador técnico y que son
         ejecutados en el marco de la gestión del FFIE.
     </div>
+
+    <div class="busqueda mt-2em">
+        <mat-form-field appearance="outline" class="busqueda--input">
+            <mat-label>Buscador / Filtro</mat-label>
+            <input matInput #filtro (keyup)="applyFilter($event)">
+        </mat-form-field>
+        <button mat-button color="primary" class="busqueda--img" (click)="filtro.focus()">
+            <img src="assets/img/icon/lupa.svg" alt="Buscar">
+        </button>
+    </div>
+
     <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="fechaSolicitud">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de autorización del coordinador técnico </th>
-                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaSolicitud }}</b> </td>
+                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
             </ng-container>
             <ng-container matColumnDef="numeroSolicitud">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de solicitud </th>
@@ -28,7 +39,7 @@
             </ng-container>
             <ng-container matColumnDef="modalidadContrato">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Modalidad del contrato </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.modalidadContrato }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.modalidadNombre }} </td>
             </ng-container>
             <ng-container matColumnDef="numeroContrato">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número del contrato </th>
@@ -36,7 +47,7 @@
             </ng-container>
             <ng-container matColumnDef="estadoVerificacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la verificación </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoVerificacion }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoNombre }} </td>
             </ng-container>
             <ng-container matColumnDef="estadoRegistro">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro </th>
@@ -50,19 +61,78 @@
             </ng-container>
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
-                <td mat-cell *matCellDef="let element" align="center"> 
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verificarSolicitud(element.gestion)">
-                        Verificar solicitud
-                    </button>
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()">
-                        Rechazar solicitud
-                    </button>
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verDetalleEditar(element.gestion)">
-                        Ver detalle/Editar
-                    </button>
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verDetalle(element.gestion)">
-                        Ver detalle
-                    </button>
+                <td mat-cell *matCellDef="let element" align="center">
+                    <ng-container *ngIf="element.tipoSolicitudCodigo !== tipoSolicitud.expensas; else esExpensas">
+                        
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'verificarFinancSolicitud', element.contratoId, element.solicitudPagoId ]">
+                                Verificar solicitud
+                        </button>
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'verificarFinancSolicitud', element.contratoId, element.solicitudPagoId ]">
+                                Ver detalle/Editar
+                        </button>
+
+                        <!--
+                        <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()">
+                            Rechazar solicitud
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()">
+                            Subsanar solicitud
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()">
+                            Enviar para validación
+                        </button>
+                        -->
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'verDetalleVerificarFinancSolicitud', element.contratoId, element.solicitudPagoId ]">
+                                Ver detalle
+                        </button>
+
+                    </ng-container>
+                    <ng-template #esExpensas>
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'verificarExpensas', element.solicitudPagoId ]">
+                                Verificar solicitud
+                        </button>
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'verificarExpensas', element.solicitudPagoId ]">
+                                Ver detalle/Editar
+                        </button>
+
+                        <!--
+                        <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()">
+                            Rechazar solicitud
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()">
+                            Subsanar solicitud
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()">
+                            Enviar para validación
+                        </button>
+                        -->
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'verDetalleExpensas', element.solicitudPagoId ]">
+                                Ver detalle
+                        </button>
+
+                    </ng-template>
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
