--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
@@ -77,7 +77,7 @@
                                 color="accent"
                                 class="btn-table"
                                 *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacion && element.registroCompletoVerificar === true && element.tieneObservacion === false"
-                                (click)="getCerificadoDialog( element )">
+                                (click)="getAutorizarSolicitudPago( element.solicitudPagoId )">
                                 Enviar para autorizar solicitud
                         </button>
 
@@ -121,7 +121,7 @@
                                 color="accent"
                                 class="btn-table"
                                 *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacion && element.registroCompletoVerificar === true && element.tieneObservacion === false"
-                                (click)="getCerificadoDialog( element )">
+                                (click)="getAutorizarSolicitudPago( element.solicitudPagoId )">
                                 Enviar para autorizar solicitud
                         </button>
 
