--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.html
@@ -209,7 +209,7 @@
                 </span>
             </div>
             <button mat-button color="warn" class="btn-guardar" type="button" (click)="guardar()"
-                [disabled]="otrosCostosForm.dirty === false">
+                [disabled]="otrosCostosObsForm.dirty === false">
                 <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </form>
