--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
@@ -50,26 +50,47 @@
     <ng-container matColumnDef="novedadContractualId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
-        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          [routerLink]="[ 'validarSolicitudNovedadInterventoria', element.novedadContractualId ]">
+<a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
+            [routerLink]="[ 'validarSolicitudNovedadObra', element.novedadContractualId ]"
+            *ngIf=" element.estadoCodigo === '4'">
           Validar solicitud
         </a>
+
         <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-        (click)="this.rechazarSolicitud( element.novedadContractualId)">
+        (click)="this.rechazarSolicitud( element.novedadContractualId)"
+          *ngIf=" element.estadoCodigo === '5' && 
+                  element.registroCompletoValidacion === true && 
+                  element.tieneObservacionesSupervisor === true">
           Rechazar solicitud
         </button>
+
         <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-        (click)="this.devolverSolicitud( element.novedadContractualId)">
-        Devolver solicitud
+        (click)="this.devolver( element.novedadContractualId)"
+          *ngIf=" element.estadoCodigo === '5' &&  
+                  element.registroCompletoValidacion === true && 
+                  element.tieneObservacionesSupervisor === true">
+          Devolver solicitud
         </button>
-        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          [routerLink]="[ 'verDetalleEditarSolicitudNovedadInterventoria', element.novedadContractualId ]">
-          Ver detalle/Editar
-        </a>
-        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-        [routerLink]="[ 'verDetalleSolicitudNovedadInterventoria', element.novedadContractualId ]">
-        Ver detalle
+
+        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
+        [routerLink]="[ 'verDetalleEditarSolicitudNovedadObra', element.novedadContractualId ]"
+        *ngIf="element.estadoCodigo === '5'">
+        Ver detalle/Editar
       </a>
+
+      <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
+      [routerLink]="[ 'verDetalleSolicitudNovedadObra', element.novedadContractualId ]"
+      *ngIf=" element.estadoCodigo !== '4' && element.estadoCodigo !== '5'">
+      Ver detalle
+    </a>
+
+      <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
+        (click)="tramitar(element.novedadContractualId)"
+        *ngIf=" element.estadoCodigo === '5' && 
+                element.registroCompletoValidacion === true &&
+                element.tieneObservacionesSupervisor === false">
+        Tramitar solicitud
+      </button> 
       </td>
     </ng-container>
 
