--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-interventoria/validar-novedad-contrato-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-interventoria/validar-novedad-contrato-interventoria.component.html
@@ -296,30 +296,28 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="shipping-card var-main-gris" *ngIf="false">
+  <mat-card class="shipping-card var-main-gris" *ngIf="novedad.observacionApoyo !== undefined">
     <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="header-card--text">
-        Observaciones del equipo de seguimiento y control
+        Verificación del apoyo a la supervisión
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <p>
+      <p> 
         <strong>
-          25/10/2020
+          {{ novedad.observacionApoyo.fechaCreacion | date: 'dd/MM/yyyy' }}
         </strong>
       </p>
       <p>
         <strong>
-          Estado del proceso:
+          ¿Tiene observaciones a la solicitud de novedad?:
         </strong>
-        Devuelta para ajustes de supervisión
+        Sí
       </p>
-      <p>
-        <span class="d-block">
-          La novedad se devuelve debido a que es necesario revisar a detalle la justificación de la suspensión que
-          solicitan.
-        </span>
-      </p>
+      <section 
+                  [innerHTML]="novedad.observacionApoyo.observaciones"
+                  style="margin-left: 2em"
+          ></section>
     </mat-card-content>
   </mat-card>
 
