--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
@@ -225,16 +225,16 @@
     </mat-expansion-panel>
   </mat-accordion>
 
-  <mat-card class="shipping-card var-main-gris mt-2em">
+  <mat-card class="shipping-card var-main-gris" *ngIf="novedad.observacionApoyo !== undefined">
     <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="header-card--text">
         Verificación del apoyo a la supervisión
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <p>
+      <p> 
         <strong>
-          20/10/2020
+          {{ novedad.observacionApoyo.fechaCreacion | date: 'dd/MM/yyyy' }}
         </strong>
       </p>
       <p>
@@ -243,9 +243,10 @@
         </strong>
         Sí
       </p>
-      <p>
-        Se requieren más soportes que justifiquen la novedad solicitada.
-      </p>
+      <section 
+                  [innerHTML]="novedad.observacionApoyo.observaciones"
+                  style="margin-left: 2em"
+          ></section>
     </mat-card-content>
   </mat-card>
 
@@ -298,7 +299,7 @@
     </div>
   </form>
 
-  <mat-card class="shipping-card var-main-gris">
+  <mat-card class="shipping-card var-main-gris" *ngIf="false">
     <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="header-card--text">
         Causa del rechazo por el supervisor
