--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-interventoria/ver-detalle-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-interventoria/ver-detalle-interventoria.component.html
@@ -220,7 +220,7 @@
     </mat-expansion-panel>
   </mat-accordion>
 
-  <div *ngIf="true">
+  <div *ngIf="novedad.obervacionSupervisorId">
     <mat-card class="shipping-card var-main-gris">
       <mat-card-header class="header-card header-card--margin">
         <mat-card-title class="header-card--text">
@@ -231,18 +231,18 @@
 
         <p>
           <strong>
-            20/10/2020
+            {{ novedad.observacionDevolucion.fechaCreacion | date: 'dd/MM/yyyy' }}
           </strong>
         </p>
-        <p>
-          No es posible acceder a la ruta de soporte, verificar la URL.
-        </p>
-
+          <section 
+                  [innerHTML]="novedad.observacionDevolucion.observaciones"
+                  style="margin-left: 2em"
+          ></section>
       </mat-card-content>
     </mat-card>
   </div>
 
-  <div *ngIf="true">
+  <div *ngIf="false">
     <table class="mat-table cdk-table mat-sort mat-table-style table-form table-form--2 table-gris">
       <thead>
         <tr class="mat-header-row cdk-header-row ng-star-inserted">
