irst steps of module of Reports 7.2 & 7.3

--- a/asivamosffie.web/asivamosffie/src/app/shared/components/sub-menu/sub-menu.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/shared/components/sub-menu/sub-menu.component.html
@@ -7,13 +7,13 @@
           Ficha de contratos o proyectos
         </span>
       </a>
-      <a class="menu--button">
+      <a class="menu--button" routerLink="mapaInteractivo">
         <img src="assets/img/icon/Menu-principal/mapa.svg" alt="Mapa interactivo y estadísticas generales">
         <span class="menu--span">
           Mapa interactivo y estadísticas generales
         </span>
       </a>
-      <a class="menu--button">
+      <a class="menu--button" routerLink="reportesEstandar">
         <img src="assets/img/icon/Menu-principal/reportes.svg" alt="Reportes estándar">
         <span class="menu--span">
           Reportes estándar
