--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
@@ -142,5 +142,34 @@
                             [novedad]=novedad>
         </app-expansion-panel>
   </div>
+  <div *ngIf="novedad.observacionDevolucion">
+    <mat-card class="shipping-card var-main-gris">
+      <mat-card-header class="header-card header-card--margin">
+        <mat-card-title class="header-card--text">
+          Observaciones del supervisor
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+
+        <p>
+          <strong>
+            {{ novedad.fechaCreacion | date: 'dd/MM/yyyy' }}
+          </strong>
+        </p>
+
+        <p>
+          <strong>
+            ¿Desde la supervisión tiene observaciones a la solicitud de novedad?:
+          </strong>
+          Sí
+        </p>
+        <section 
+                        [innerHTML]="novedad.observacionDevolucion.observaciones"
+                        style="margin-left: 2em"
+                        
+                ></section>
+      </mat-card-content>
+    </mat-card>
+  </div>
 
 </section>
