--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/verificar-solicitud-novedad/verificar-solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/verificar-solicitud-novedad/verificar-solicitud-novedad.component.html
@@ -215,6 +215,36 @@
     </mat-expansion-panel>
   </mat-accordion>
 
+  <div *ngIf="novedad.observacionDevolucion">
+    <mat-card class="shipping-card var-main-gris">
+      <mat-card-header class="header-card header-card--margin">
+        <mat-card-title class="header-card--text">
+          Observaciones del supervisor
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+
+        <p>
+          <strong>
+            {{ novedad.fechaCreacion | date: 'dd/MM/yyyy' }}
+          </strong>
+        </p>
+
+        <p>
+          <strong>
+            ¿Desde la supervisión tiene observaciones a la solicitud de novedad?:
+          </strong>
+          Sí
+        </p>
+        <section 
+                        [innerHTML]="novedad.observacionDevolucion.observaciones"
+                        style="margin-left: 2em"
+                        
+                ></section>
+      </mat-card-content>
+    </mat-card>
+  </div>
+
       <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
         <div class="row justify-content-center mt-2em">
           <div class="pr-1">
